# Cmake-issue-minimum-example

./: CMakeLists.txt  README.md  compile_commands.json
.github/workflows/: build.yml
include/: Log.hpp
src/: Log.cpp  main.cpp
